product column update
